--- a/LoginApp/Views/Account/Edit.cshtml
+++ b/LoginApp/Views/Account/Edit.cshtml
@@ -25,6 +25,11 @@
             <input asp-for="Username" class="form-control" required />
         </div>
 
+        <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input asp-for="Password" class="form-control" required />
+        </div>
+
         <button type="submit" class="btn btn-success">✅ Update</button>
         <a asp-action="Users" class="btn btn-secondary">⬅️ Back</a>
     </form>
